--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,16 @@ description = "A Rust client for interacting with Google's Gemini API. Tailored 
 repository = "https://github.com/Jerjes0/gemini_client_rust"
 readme = "README.md"
 keywords = ["gemini", "google", "api", "rust"]
-categories = ["web-programming", "api-bindings", "data-processing"]
+categories = ["web-programming", "api-bindings"]
 
 [dependencies]
-reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+gloo-net = "0.4"  
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4" 
+web-sys = { version = "0.3", features = ["console"] }
+gloo-utils = "0.2"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
